# equirect

./: Cargo.toml  DESIGN.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
resources/: icons.json
src/: app.rs  audio.rs  input.rs  logo.rs  main.rs  net.rs  pointer_renderer.rs  renderer.rs  video_layer.rs  video_meta.rs  video_renderer.rs  volumes.rs  vr.rs
src/shaders/: hello-triangle.wgsl  logo-blit.wgsl  panel-quad.wgsl  pointer.wgsl  video-blit.wgsl  video-quad.wgsl
src/ui/: browser.rs  control_bar.rs  fonts.rs  icons.rs  mod.rs  panel.rs  settings.rs
src/video/: decoder.rs  mod.rs  texture.rs
