[package]
name = "equirect"
version = "1.1.2"
edition = "2024"

[lints.rust]
warnings = "deny"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
winresource = "0.1"

[dependencies]
anyhow = "1"
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.15"
directories = "5"
egui = "0.34.1"
png = "0.17"
egui-wgpu = "0.34.1"
glam = "0.32.1"
openxr = { version = "0.21.1", features = ["static", "linked"] }
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2"
wgpu = "29"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.packager]
product_name = "equirect"
identifier = "com.greggman.equirect"
icons = ["./resources/images/icon-32x32.png", "./resources/images/icon-128x128.png"]

[package.metadata.packager.nsis]
installer_mode = "currentUser"
